--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FFXIV stat calculator</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Crit Calculator</h1>
     <input type="number" id="level" min="1" max="90">
     <label>Critical Hit</label>
     <input type="number" id="crit" min="1">
