--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFXIV stat calculator</title>
+    <script src="./index.js" defer></script>
 </head>
 <body>
     <h1>Crit Calculator</h1>
+    <label>Level</label>
     <input type="number" id="level" min="1" max="90">
+    <button id="maxLevel">Max</button>
     <label>Critical Hit</label>
     <input type="number" id="crit" min="1">
+    <p class="critResult"></p>
 </body>
 </html>
