--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FFXIV stat calculator</title>
-    <script src="./index.js" defer></script>
-</head>
-<body>
-    <h1>Crit Calculator</h1>
-    <label>Level</label>
-    <input type="number" id="level" min="1" max="90">
-    <button id="maxLevel">Max</button>
-    <label>Critical Hit</label>
-    <input type="number" id="crit" min="1">
-    <p class="critResult"></p>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FFXIV stat calculator</title>
+        <script src="./index.js" defer></script>
+    </head>
+    <body>
+        <label>Level</label>
+        <input type="number" id="level" min="1" max="90" />
+        <section class="criticalHit">
+            <h1>Critical Hit</h1>
+            <label>Critical Hit</label>
+            <input type="number" id="crit" min="1" />
+            <p class="critResult"></p>
+        </section>
+        <section class="directHit">
+            <h1>Direct Hit</h1>
+            <label>Direct Hit</label>
+            <input type="number" id="dh" min="1" />
+            <p class="directHitResult"></p>
+        </section>
+    </body>
 </html>
