--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
         <script src="./index.js" defer></script>
     </head>
     <body>
+        <h1>FFXIV Critical and Direct Hit Calculator</h1>
         <label>Level</label>
         <input type="number" id="level" min="1" max="90" />
         <section class="criticalHit">
-            <h1>Critical Hit</h1>
+            <h2>Critical Hit</h2>
             <label>Critical Hit</label>
             <input type="number" id="crit" min="1" />
             <p class="critResult"></p>
         </section>
         <section class="directHit">
-            <h1>Direct Hit</h1>
+            <h2>Direct Hit</h2>
             <label>Direct Hit</label>
             <input type="number" id="dh" min="1" />
             <p class="directHitResult"></p>
+        </section>
+        <section class="criticalDirectHit">
+            <h2>Critical Direct Hit</h2>
+            <p class="critDirResult">10000%</p>
         </section>
     </body>
 </html>
